// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hide renders 1`] = `
<div
  className=""
/>
`;

exports[`Hide renders with lg prop 1`] = `
<div
  className="dzMCnZ"
/>
`;

exports[`Hide renders with md prop 1`] = `
<div
  className="dtcwbM"
/>
`;

exports[`Hide renders with sm prop 1`] = `
<div
  className="iRIqFL"
/>
`;

exports[`Hide renders with xl prop 1`] = `
<div
  className="gEwfJV"
/>
`;

exports[`Hide renders with xs prop 1`] = `
<div
  className="fTehsK"
/>
`;
